--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,12 @@
     "react-helmet": "^5.2.1"
   },
   "dependencies": {
-    "gatsby-image": "^2.0.41"
+    "@styled-icons/boxicons-logos": "^10.18.0",
+    "@styled-icons/boxicons-regular": "^10.18.0",
+    "@styled-icons/boxicons-solid": "^10.18.0",
+    "bootstrap": "^4.5.2",
+    "gatsby-image": "^2.0.41",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "styled-components": "^5.2.0"
   }
 }
